# strands_QA_Agent

./: .env.example  .gitignore  Instruction_guide.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
src/qa_agent/: __init__.py  agent.py  llm.py  llm_client.py  logging_config.py  main.py  mcp_server.py  pipeline.py  security.py
src/qa_agent/tools/: compliance_tool.py  report_tool.py  spell_tool.py  template_tool.py  web_tools.py
